// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProductSubscriptionStatus toggle: license key hidden 1`] = `
<DocumentFragment>
  <div
    class="card"
    data-testid="product-certificate"
  >
    <div
      class="cardBody d-flex align-items-center"
    >
      <img
        alt="Sourcegraph logo"
        class="logo mr-1 p-2"
        src="/.assets/img/sourcegraph-mark.svg?v2"
      />
      <div>
        <h2
          class="h2 font-weight-normal mb-1"
        >
          P
        </h2>
        <h3
          class="h3 text-muted font-weight-normal"
        >
          123-user license, 
          <span>
            expired on 
            <span
              title="Jan 1, 1970, 12:00:23 AM"
            >
              1970-01-01
            </span>
             (36 years ago)
          </span>
        </h3>
      </div>
    </div>
    <div
      class="bg"
    />
    <div
      class="footer"
    >
      <div
        class="cardFooter d-flex align-items-center justify-content-between flex-wrap"
      >
        <button
          class="btn btnPrimary mr-4 my-1"
          type="button"
        >
          <keyicon
            class="iconInline"
          />
           Reveal license key
        </button>
        <div
          class="flex-fill"
        />
        <div
          class="my-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserProductSubscriptionStatus toggle: license key revealed 1`] = `
<DocumentFragment>
  <div
    class="card"
    data-testid="product-certificate"
  >
    <div
      class="cardBody d-flex align-items-center"
    >
      <img
        alt="Sourcegraph logo"
        class="logo mr-1 p-2"
        src="/.assets/img/sourcegraph-mark.svg?v2"
      />
      <div>
        <h2
          class="h2 font-weight-normal mb-1"
        >
          P
        </h2>
        <h3
          class="h3 text-muted font-weight-normal"
        >
          123-user license, 
          <span>
            expired on 
            <span
              title="Jan 1, 1970, 12:00:23 AM"
            >
              1970-01-01
            </span>
             (36 years ago)
          </span>
        </h3>
      </div>
    </div>
    <div
      class="bg"
    />
    <div
      class="footer"
    >
      <div
        class="cardFooter d-flex align-items-center justify-content-between flex-wrap"
      >
        <button
          class="btn btnPrimary mr-4 my-1"
          type="button"
        >
          <keyicon
            class="iconInline"
          />
           Hide license key
        </button>
        <div
          class="flex-fill"
        />
        <div
          class="my-1"
        />
      </div>
      <div
        class="cardFooter"
      >
        <h3
          class="h3"
        >
          License key
        </h3>
        <copyabletext
          class="d-block"
          text="lk"
        />
        <small
          class="mt-2 d-flex align-items-center"
        >
          <informationicon
            class="iconInline mr-1"
          />
           
          <span>
            Use this license key as the 
            <code>
              <strong>
                licenseKey
              </strong>
            </code>
             property value in Sourcegraph site configuration.
          </span>
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
